# AITKL2025

./: .gitignore  README.md  package-lock.json  pyproject.toml
backend/db/: get_data.py  insert_data.py  models.py
backend/scraper/: script.py  structured_output.txt
backend/utils/: st_debug_app.py  startup_analyzer.py
frontend/: README.md  app.py  flask_app.py  package-lock.json
frontend/data/: get_data.py  showcase_data.json
frontend/templates/: apply.html  base.html  home.html  index.html  jobs.html  showcase.html  showcase1.html
frontend/templates/components/: card.html  footer.html  founders.html  header.html  tags.html
