[project]
name = "aitkl2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinker==1.9.0",
    "click==8.2.1",
    "colorama==0.4.6",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.0.2",
    "flask==3.1.1",
    "google-generativeai>=0.8.5",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "tenacity>=9.1.2",
    "werkzeug==3.1.3",
]

[dependency-groups]
dev = [
    "streamlit>=1.45.1",
]
